# dbt-practice

./: .gitignore  .pre-commit-config.yaml  .user.yml  dbt_project.yml  pyproject.toml
macros/: cents_to_dollars.sql  dolar.sql
models/staging/: stg_supplies.sql
