[tool.poetry]
name = "dbt-practice"
version = "0.1.0"
description = ""
authors = ["lksprado <lks-prado@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlfluff = "^3.3.0"
dbt-core = "^1.9.0"
dbt-bigquery = "^1.9.0"
python-dotenv = "^1.0.1"
sqlfluff-templater-dbt = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
